<resources>
    <string name="app_name">OrdenPedidosServer</string>
    <string name="slogan">we transport products to customers  as quicky as our ex betrays</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tracking_order">Map</string>
    <string name="BtnMessage">SEND</string>
    <string name="EdtxHintMessage">Message</string>
    <string name="EdtxHintTitle">Title</string>
    <string name="IDname">#11111</string>
    <string name="txtDate">Date</string>
    <string name="txtStatus">Status</string>
    <string name="txtPhone">123456789</string>
    <string name="txtAddress">Address</string>
    <string name="txtbtnEdit">Editar</string>
    <string name="txtbtnRemove">Remove</string>
    <string name="txtbtnDetalle">Detalle</string>
    <string name="txtbtnDireccion">Direccion</string>
    <string name="MenuBanner">Banner</string>
    <string name="Menu">Menu</string>
    <string name="MenuCart">Cart</string>
    <string name="MenuOrder">Orders</string>
    <string name="MenuShipper">Shipper Management</string>
    <string name="MenuMessage">Message</string>
    <string name="MenuSign_Out">Sign Out</string>
    <string name="IDnameshipper">Shipper Name</string>
    <string name="txtPhoneShipper">Shipper Phone</string>
    <string name="edtxAccountNameShipper">Name Shipper</string>
    <string name="edtxAccountPhoneShipper">Phone</string>
    <string name="edtxPasswordAccountShipper">Password</string>
    <string name="txtStatusSpinner">Status:</string>
    <string name="txtShipperSpinner">Shipper</string>
    <string name="btnSigIn">Sign In</string>
    <string name="txtDetailId">ID</string>
    <string name="txtDetailPhone">Phone</string>
    <string name="txtDetailTotal">$1000</string>
    <string name="txtDetailAddress">Address</string>
    <string name="txtDetailComment">Comment</string>
    <string name="txtDetail">Detail</string>
    <string name="edtxPaswoord">1234</string>
    <string name="edtxHintPassword">Password</string>
    <string name="edtxHintPhone">Numero de celular</string>
    <string name="edtxPhone">0123</string>
    <string name="edtxHintFoodId">FoodId</string>
    <string name="edtxHintFoodName">Food Name</string>
    <string name="btnSelectBanner">Select</string>
    <string name="btnUploadBanner">Upload</string>
    <string name="edtxHindNameFood">Name</string>
    <string name="edtxHindDescriptionFood">Descripcion</string>
    <string name="edtxHindPrecioFood">Precio</string>
    <string name="edtxHindDescuentoFood">Descuento</string>
    <string name="Name_of_Banner">Name of Banner</string>
    <string name="Name_of_Food">Name of Food</string>
    <string name="Name_of_menu">Name of menu</string>
    <string name="txtNameUser">Jose Guerra</string>
    <string name="product_name">product name</string>
    <string name="product_quantity">product quantity</string>
    <string name="product_price">product price</string>
    <string name="product_discount">product discount</string>

</resources>
