<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    >

    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/Id_food_Id"
        android:hint="@string/edtxHintFoodId"
        android:textColorHint="@color/colorPrimary"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_baseColor="@color/colorPrimary"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorPrimary"
        app:met_singleLineEllipsis="true"

        />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/Id_food_Name"
            android:hint="@string/edtxHintFoodName"
            android:textColorHint="@color/colorPrimary"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true"

            />
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <info.hoang8f.widget.FButton
                android:id="@+id/IdbtnSelectBanner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/btnSelectBanner"
                android:layout_margin="8dp"
                android:textColor="@android:color/white"
                app:fButtonColor="@color/colorPrimaryDark"
                app:shadowColor="@android:color/black"
                app:shadowEnabled="true"
                app:shadowHeight="5dp"
                app:cornerRadius="4dp"

                />

            <info.hoang8f.widget.FButton
                android:id="@+id/IdbtnUploadBanner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/btnUploadBanner"
                android:layout_margin="8dp"
                android:textColor="@android:color/white"
                app:fButtonColor="@color/colorPrimary"
                app:shadowColor="@android:color/black"
                app:shadowEnabled="true"
                app:shadowHeight="5dp"
                app:cornerRadius="4dp"

                />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>